[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy that translates between Anthropic API and LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.14",
    "python-dotenv>=1.0.0",
    "gnureadline>=8.2.13",
]

# ----- 可选依赖 -----
[project.optional-dependencies]
# 运行 Vertex AI/Gemini on Vertex 相关功能时需要
vertex = [
    "google-auth>=2.29.0",
    "google-cloud-aiplatform>=1.46.0",
]

# 本地测试与开发
tests = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

# ---- uv dependency groups ----
[dependency-groups]
tests = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

vertex = [
    "google-auth>=2.29.0",
    "google-cloud-aiplatform>=1.46.0",
]

